made navbar fixed and opaque, corrected overlap with page body

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Tsukimi+Rounded:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');
 
-.home-body {
-    background-image: "forest-background.jpg";
-}
 
 .home-body {
     background-image: url("forest-background.jpg");
@@ -14,6 +11,7 @@
     align-items: center;
     flex-direction: column;
     /* flex-wrap: wrap; */
+    margin-top: 115px;
 }
 
 .profile-body {
@@ -25,6 +23,11 @@
     align-items: center;
     flex-direction: column;
     /* flex-wrap: wrap; */
+    margin-top: 115px;
+}
+
+.learn-body {
+    margin-top: 115px;
 }
 
 span {
@@ -70,15 +73,22 @@ span {
 }
 
 .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
     font-size: x-large;
-    padding: 0;
-    background-color: #849c8c85;
-}
+    padding-right: 30px;
+    padding-left: 30px;
+    background-color: #b2bcb9;
+    margin-bottom: 100px;
+  }
 
 .nav-1 {
     list-style: none;
@@ -111,6 +121,10 @@ span {
 
 
 #airiq-widget {
-    background-color: white;
+    background-color: blue;
+    height: 50px;
+    position: absolute;
+  top: 0;
+  right: 0;
 }
 
